Add styles of header

--- a/main.html
+++ b/main.html
@@ -83,19 +83,19 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="/src/images/icon-facebook@2x.png" alt="facebook"></a>
+              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="/src/images/icon-facebook@2x.png" alt="facebook"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="/src/images/icon-linkedin@2x.png" alt="linkedin"></a>
+              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="/src/images/icon-linkedin@2x.png" alt="linkedin"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="/src/images/icon-youtube@2x.png" alt="youtube"></a>
+              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="/src/images/icon-youtube@2x.png" alt="youtube"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="/src/images/icon-twitter@2x.png" alt="twitter"></a>
+              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="/src/images/icon-twitter@2x.png" alt="twitter"></a>
             </li>
           </ul>
-          <a class="navbar-primary__search" href="">
+          <a class="navbar-primary__search d-none d-lg-block" href="">
             <img src="/src/images/icon-lupa2x.png" alt="lupa">
           </a>
           <div class="dropdown">
@@ -112,9 +112,8 @@
       </div>
     </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-secondary" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-secondary d-none d-lg-block" role="navigation">
       <div class="container">
-        <!-- <a class="navbar-brand" href="#">Navbar Secondary</a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo" aria-controls="navbarTwo" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -273,10 +272,6 @@
                           <a class="nav-link" href="#">Presenças Especiais</a>
                         </li>
                       </ul>
-                      <!-- <a href="">
-                        <img src="https://dummyimage.com/200x100/ccc/000&text=image+link" alt="" class="img-fluid">
-                      </a>
-                      <p class="text-white">Short image call to action</p> -->
                     </div>
                     <div class="col-12">
                       <ul class="dropdown-menumega__bottomlinks">
@@ -433,7 +428,7 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-12">
           <h1>Hello world!</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, dignissimos. Laudantium ab praesentium voluptates eius quidem omnis reprehenderit magnam? Deleniti repudiandae ratione dolorem, amet nobis non voluptate aspernatur nemo? Ab.</p>
         </div>
