--- a/main.html
+++ b/main.html
@@ -426,14 +426,51 @@
   </header> <!-- end -->
 
   <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h1>Hello world!</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, dignissimos. Laudantium ab praesentium voluptates eius quidem omnis reprehenderit magnam? Deleniti repudiandae ratione dolorem, amet nobis non voluptate aspernatur nemo? Ab.</p>
+    <section class="mc-bannerfull">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="/src/images/banner-home.png" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+              <p>Bem-vindos à</p>
+              <p>CASA GERAL</p>
+              <p>dos Irmãos Maristas</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/src/images/banner-home.png" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/src/images/banner-home.png" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section> <!-- end -->
+
+    <section class="mc-highlights">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>Hello world!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, dignissimos. Laudantium ab praesentium voluptates eius quidem omnis reprehenderit magnam? Deleniti repudiandae ratione dolorem, amet nobis non voluptate aspernatur nemo? Ab.</p>
+          </div>
         </div>
       </div>
-    </div>
+    </section> <!-- end -->
+
   </main> <!-- end -->
 
   <footer>
