--- a/main.html
+++ b/main.html
@@ -427,33 +427,43 @@
 
   <main>
     <section class="mc-bannerfull">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <div id="homeCarouselIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#homeCarouselIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#homeCarouselIndicators" data-slide-to="1"></li>
+          <li data-target="#homeCarouselIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="/src/images/banner-home.png" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-              <p>Bem-vindos à</p>
-              <p>CASA GERAL</p>
-              <p>dos Irmãos Maristas</p>
+            <div class="carousel-caption d-none d-md-block ">
+              <p class="mc-bannerfull__txt1">Bem-vindos à</p>
+              <p class="mc-bannerfull__txt2">CASA GERAL</p>
+              <p class="mc-bannerfull__txt3">dos Irmãos Maristas</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="/src/images/banner-home.png" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block ">
+              <p class="mc-bannerfull__txt1">Bem-vindos à</p>
+              <p class="mc-bannerfull__txt2">CASA GERAL</p>
+              <p class="mc-bannerfull__txt3">dos Irmãos Maristas</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="/src/images/banner-home.png" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block ">
+              <p class="mc-bannerfull__txt1">Bem-vindos à</p>
+              <p class="mc-bannerfull__txt2">CASA GERAL</p>
+              <p class="mc-bannerfull__txt3">dos Irmãos Maristas</p>
+            </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <a class="carousel-control carousel-control-prev" href="#homeCarouselIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control carousel-control-next" href="#homeCarouselIndicators" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
