--- a/main.html
+++ b/main.html
@@ -471,15 +471,78 @@
     </section> <!-- end -->
 
     <section class="mc-highlights">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h1>Hello world!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, dignissimos. Laudantium ab praesentium voluptates eius quidem omnis reprehenderit magnam? Deleniti repudiandae ratione dolorem, amet nobis non voluptate aspernatur nemo? Ab.</p>
+      <div id="highlightsCarouselIndicators" class="carousel carousel--multi slide" data-ride="carousel">
+        <div class="container">
+          <div class="carousel-inner row w-100 mx-auto">
+            <div class="carousel-item active">
+              <div class="col-md-3">
+                <div class="d-flex h-100 align-items-center justify-content-center">
+                  <h1>Text 1</h1>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="d-flex h-100 align-items-center justify-content-center">
+                  <h1>Text 1</h1>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="d-flex h-100 align-items-center justify-content-center">
+                  <h1>Text 1</h1>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="d-flex h-100 align-items-center justify-content-center">
+                  <h1>Text 1</h1>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="col-md-3">
+                <div class="d-flex h-100 align-items-center justify-content-center">
+                  <h1>Text 1</h1>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="d-flex h-100 align-items-center justify-content-center">
+                  <h1>Text 1</h1>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="d-flex h-100 align-items-center justify-content-center">
+                  <h1>Text 1</h1>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="d-flex h-100 align-items-center justify-content-center">
+                  <h1>Text 1</h1>
+                </div>
+              </div>
+            </div>
           </div>
+          <a class="carousel-control carousel-control-prev" href="#highlightsCarouselIndicators" role="button"
+            data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control carousel-control-next" href="#highlightsCarouselIndicators" role="button"
+            data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
     </section> <!-- end -->
+
+    <section>
+      <div class="row">
+        <div class="col-12">
+          <h1>Hello world!</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, dignissimos. Laudantium ab praesentium
+            voluptates eius quidem omnis reprehenderit magnam? Deleniti repudiandae ratione dolorem, amet nobis non voluptate
+            aspernatur nemo? Ab.</p>
+        </div>
+      </div>
+    </section>
 
   </main> <!-- end -->
 
