--- a/main.html
+++ b/main.html
@@ -473,6 +473,13 @@
     <section class="mc-highlights">
       <div id="highlightsCarouselIndicators" class="carousel carousel--multi slide" data-ride="carousel">
         <div class="container">
+          <div class="carousel-nav d-flex">
+            <span>EM DESTAQUE</span>
+            <a class="btn btn-secondary prev" href="" title="go back"><i class="fa fa-lg fa-chevron-left"></i></a>
+            <a class="btn btn-secondary next" href="" title="more"><i class="fa fa-lg fa-chevron-right"></i></a>
+          </div>
+        </div>
+        <div class="container">
           <div class="carousel-inner row w-100 mx-auto">
             <div class="carousel-item active">
               <div class="col-md-3">
@@ -482,17 +489,17 @@
               </div>
               <div class="col-md-3">
                 <div class="d-flex h-100 align-items-center justify-content-center">
-                  <h1>Text 1</h1>
+                  <h1>Text 2</h1>
                 </div>
               </div>
               <div class="col-md-3">
                 <div class="d-flex h-100 align-items-center justify-content-center">
-                  <h1>Text 1</h1>
+                  <h1>Text 3</h1>
                 </div>
               </div>
               <div class="col-md-3">
                 <div class="d-flex h-100 align-items-center justify-content-center">
-                  <h1>Text 1</h1>
+                  <h1>Text 4</h1>
                 </div>
               </div>
             </div>
