Add carousel highlights styles

--- a/main.html
+++ b/main.html
@@ -473,8 +473,8 @@
     <section class="mc-highlights">
       <div id="highlightsCarouselIndicators" class="carousel carousel--multi slide" data-ride="carousel">
         <div class="container">
-          <div class="carousel-nav d-flex">
-            <span>EM DESTAQUE</span>
+          <div class="carousel-nav d-flex align-items-center">
+            <span class="mr-auto">EM DESTAQUE</span>
             <a class="btn btn-secondary prev" href="" title="go back"><i class="fa fa-lg fa-chevron-left"></i></a>
             <a class="btn btn-secondary next" href="" title="more"><i class="fa fa-lg fa-chevron-right"></i></a>
           </div>
@@ -541,12 +541,14 @@
     </section> <!-- end -->
 
     <section>
-      <div class="row">
-        <div class="col-12">
-          <h1>Hello world!</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, dignissimos. Laudantium ab praesentium
-            voluptates eius quidem omnis reprehenderit magnam? Deleniti repudiandae ratione dolorem, amet nobis non voluptate
-            aspernatur nemo? Ab.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>Hello world!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, dignissimos. Laudantium ab praesentium
+              voluptates eius quidem omnis reprehenderit magnam? Deleniti repudiandae ratione dolorem, amet nobis non voluptate
+              aspernatur nemo? Ab.</p>
+          </div>
         </div>
       </div>
     </section>
