--- a/main.html
+++ b/main.html
@@ -475,31 +475,67 @@
         <div class="container">
           <div class="carousel-nav d-flex align-items-center">
             <span class="mr-auto">EM DESTAQUE</span>
-            <a class="btn btn-secondary prev" href="" title="go back"><i class="fa fa-lg fa-chevron-left"></i></a>
-            <a class="btn btn-secondary next" href="" title="more"><i class="fa fa-lg fa-chevron-right"></i></a>
+            <a class="btn btn-secondary prev1" href="" title="go back"><i class="fa fa-long-arrow-left"></i></a>
+            <a class="btn btn-secondary next1" href="" title="more"><i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
         <div class="container">
           <div class="carousel-inner row w-100 mx-auto">
             <div class="carousel-item active">
               <div class="col-md-3">
-                <div class="d-flex h-100 align-items-center justify-content-center">
-                  <h1>Text 1</h1>
+                <div class="d-flex flex-column h-100 align-items-center justify-content-center">
+                  <div class="carousel-item__header">
+                    <span class="date">27/11/2018</span>
+                    <span class="label">ITÁLIA</span>
+                  </div>
+                  <div class="carousel-item__body">
+                    <p>Mundo marista: Journées de Genval – 2ème Journée sur le Credo : Jésus-Christ</p>
+                  </div>
+                  <div class="carousel-item__footer">
+                    <a href="">Continue lendo <i class="fa fa-long-arrow-right"></i></a>
+                  </div>
                 </div>
               </div>
               <div class="col-md-3">
-                <div class="d-flex h-100 align-items-center justify-content-center">
-                  <h1>Text 2</h1>
+                <div class="d-flex flex-column h-100 align-items-center justify-content-center">
+                  <div class="carousel-item__header">
+                    <span class="date">27/11/2018</span>
+                    <span class="label">ITÁLIA</span>
+                  </div>
+                  <div class="carousel-item__body">
+                    <p>Mundo marista: Journées de Genval – 2ème Journée sur le Credo : Jésus-Christ</p>
+                  </div>
+                  <div class="carousel-item__footer">
+                    <a href="">Continue lendo <i class="fa fa-long-arrow-right"></i></a>
+                  </div>
                 </div>
               </div>
               <div class="col-md-3">
-                <div class="d-flex h-100 align-items-center justify-content-center">
-                  <h1>Text 3</h1>
+                <div class="d-flex flex-column h-100 align-items-center justify-content-center">
+                  <div class="carousel-item__header">
+                    <span class="date">27/11/2018</span>
+                    <span class="label">ITÁLIA</span>
+                  </div>
+                  <div class="carousel-item__body">
+                    <p>Mundo marista: Journées de Genval – 2ème Journée sur le Credo : Jésus-Christ</p>
+                  </div>
+                  <div class="carousel-item__footer">
+                    <a href="">Continue lendo <i class="fa fa-long-arrow-right"></i></a>
+                  </div>
                 </div>
               </div>
               <div class="col-md-3">
-                <div class="d-flex h-100 align-items-center justify-content-center">
-                  <h1>Text 4</h1>
+                <div class="d-flex flex-column h-100 align-items-center justify-content-center">
+                  <div class="carousel-item__header">
+                    <span class="date">27/11/2018</span>
+                    <span class="label">ITÁLIA</span>
+                  </div>
+                  <div class="carousel-item__body">
+                    <p>Mundo marista: Journées de Genval – 2ème Journée sur le Credo : Jésus-Christ</p>
+                  </div>
+                  <div class="carousel-item__footer">
+                    <a href="">Continue lendo <i class="fa fa-long-arrow-right"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -526,7 +562,7 @@
               </div>
             </div>
           </div>
-          <a class="carousel-control carousel-control-prev" href="#highlightsCarouselIndicators" role="button"
+          <!-- <a class="carousel-control carousel-control-prev" href="#highlightsCarouselIndicators" role="button"
             data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -535,7 +571,7 @@
             data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
-          </a>
+          </a> -->
         </div>
       </div>
     </section> <!-- end -->
