--- a/main.html
+++ b/main.html
@@ -67,19 +67,19 @@
             <li class="nav-item nav-item--sep active">
               <a class="nav-link nav-link--arrow" href="#">
                 <span>INSTITUTO MARISTA</span>
-                <i class="icon"></i>
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
             </li>
             <li class="nav-item nav-item--sep">
               <a class="nav-link nav-link--arrow" href="#">
                 <span>SER MARISTA DE CHAMPAGNAT</span>
-                <i class="icon"></i>
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
             </li>
             <li class="nav-item nav-item--sep">
               <a class="nav-link nav-link--arrow" href="#">
                 <span>MISSÃO MARISTA</span>
-                <i class="icon"></i>
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
             </li>
             <li class="nav-item">
@@ -294,6 +294,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarAtividades" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ATIVIDADES
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarAtividades">
                 <div class="container">
@@ -316,6 +317,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarNoticias" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 NOTÍCIAS
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarNoticias">
                 <div class="container">
@@ -338,6 +340,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarFotos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 FOTOS
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarFotos">
                 <div class="container">
@@ -361,6 +364,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarVideos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 VÍDEOS
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarVideos">
                 <div class="container">
@@ -383,6 +387,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarVideos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 BIBLIOTECA
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarVideos">
                 <div class="container">
@@ -436,7 +441,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="src/images/banner-home.png" alt="First slide">
-            <div class="carousel-caption d-none d-md-block ">
+            <div class="carousel-caption d-none d-md-none d-xl-block">
               <p class="mc-bannerfull__txt1">Bem-vindos à</p>
               <p class="mc-bannerfull__txt2">CASA GERAL</p>
               <p class="mc-bannerfull__txt3">dos Irmãos Maristas</p>
@@ -444,7 +449,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="src/images/banner-home.png" alt="Second slide">
-            <div class="carousel-caption d-none d-md-block ">
+            <div class="carousel-caption d-none d-md-none d-xl-block">
               <p class="mc-bannerfull__txt1">Bem-vindos à</p>
               <p class="mc-bannerfull__txt2">CASA GERAL</p>
               <p class="mc-bannerfull__txt3">dos Irmãos Maristas</p>
@@ -452,7 +457,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="src/images/banner-home.png" alt="Third slide">
-            <div class="carousel-caption d-none d-md-block ">
+            <div class="carousel-caption d-none d-md-none d-xl-block">
               <p class="mc-bannerfull__txt1">Bem-vindos à</p>
               <p class="mc-bannerfull__txt2">CASA GERAL</p>
               <p class="mc-bannerfull__txt3">dos Irmãos Maristas</p>
