--- a/main.html
+++ b/main.html
@@ -581,6 +581,82 @@
       </div>
     </section> <!-- end -->
 
+    <section class="mc-latestnews">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="main-title">ÚLTIMAS NOTÍCIAS</h2>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-8">
+            <h3 class="main-subtitle">EM DESTAQUE</h3>
+            <div class="row">
+              <div class="col-12 col-lg-6">
+                <div class="mc-latestnews__card">
+                  <div class="mc-latestnews__image">
+                    <img src="https://via.placeholder.com/370x220" alt="">
+                  </div>
+                  <div class="mc-latestnews__header">
+                    <span class="date">27/11/2018</span>
+                    <span class="label">ITÁLIA</span>
+                  </div>
+                  <div class="mc-latestnews__body">
+                    <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do Conselho</p>
+                  </div>
+                  <div class="mc-latestnews__footer">
+                    <ul>
+                      <li>
+                        <a href="">Inglês</a>
+                      </li>
+                      <li>
+                        <a href="">Espanhol</a>
+                      </li>
+                      <li>
+                        <a href="">Francês</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div> <!-- end -->
+              <div class="col-12 col-lg-6">
+                <div class="mc-latestnews__card">
+                  <div class="mc-latestnews__image">
+                    <img src="https://via.placeholder.com/370x220" alt="">
+                  </div>
+                  <div class="mc-latestnews__header">
+                    <span class="date">27/11/2018</span>
+                    <span class="label">ITÁLIA</span>
+                  </div>
+                  <div class="mc-latestnews__body">
+                    <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do Conselho</p>
+                  </div>
+                  <div class="mc-latestnews__footer">
+                    <ul>
+                      <li>
+                        <a href="">Inglês</a>
+                      </li>
+                      <li>
+                        <a href="">Espanhol</a>
+                      </li>
+                      <li>
+                        <a href="">Francês</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div> <!-- end -->
+            </div>
+          </div> <!-- end -->
+          <div class="col-12 col-sm-6 col-lg-4">
+            <h3 class="main-subtitle">MUNDO MARISTA</h3>
+            <a href="" class="btn btn-more-news">
+              VEJA TODAS AS NOTÍCIAS
+              <i class="fa fa-long-arrow-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section>
       <div class="container">
         <div class="row">
@@ -614,9 +690,10 @@
             <div class="input-group">
               <input class="form-control form-control--footer" type="text" placeholder="Insira seu e-mail">
               <div class="input-group-append">
-                <button class="btn btn-newsletter" type="button"></button>
+                <button class="btn btn-newsletter" type="button">
+                  <i class="fa fa-long-arrow-right"></i>
+                </button>
               </div>
-
             </div>
           </div>
         </div>
