Add latest news styles

--- a/main.html
+++ b/main.html
@@ -616,8 +616,7 @@
                     </ul>
                   </div>
                 </div>
-              </div> <!-- end -->
-              <div class="col-12 col-lg-6">
+
                 <div class="mc-latestnews__card">
                   <div class="mc-latestnews__image">
                     <img src="https://via.placeholder.com/370x220" alt="">
@@ -644,14 +643,73 @@
                   </div>
                 </div>
               </div> <!-- end -->
+
+              <div class="col-12 col-lg-6">
+                <div class="mc-latestnews__card">
+                  <div class="mc-latestnews__image">
+                    <img src="https://via.placeholder.com/370x220" alt="">
+                  </div>
+                  <div class="mc-latestnews__header">
+                    <span class="date">27/11/2018</span>
+                    <span class="label">CASA GERAL</span>
+                  </div>
+                  <div class="mc-latestnews__body">
+                    <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do Conselho</p>
+                  </div>
+                  <div class="mc-latestnews__footer">
+                    <ul>
+                      <li>
+                        <a href="">Inglês</a>
+                      </li>
+                      <li>
+                        <a href="">Espanhol</a>
+                      </li>
+                      <li>
+                        <a href="">Francês</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div> <!-- end -->
             </div>
           </div> <!-- end -->
           <div class="col-12 col-sm-6 col-lg-4">
             <h3 class="main-subtitle">MUNDO MARISTA</h3>
+            <div class="mc-latestnews__card mc-latestnews__card--v2">
+              <div class="mc-latestnews__image">
+                <img src="https://via.placeholder.com/150x120" alt="">
+              </div>
+              <div>
+                <div class="mc-latestnews__header">
+                  <span class="date">27/11/2018</span>
+                  <span class="label">ITÁLIA</span>
+                </div>
+                <div class="mc-latestnews__body">
+                  <p>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="mc-latestnews__card mc-latestnews__card--v2">
+              <div class="mc-latestnews__image">
+                <img src="https://via.placeholder.com/150x120" alt="">
+              </div>
+              <div>
+                <div class="mc-latestnews__header">
+                  <span class="date">27/11/2018</span>
+                  <span class="label">ITÁLIA</span>
+                </div>
+                <div class="mc-latestnews__body">
+                  <p>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</p>
+                </div>
+              </div>
+            </div>
+
             <a href="" class="btn btn-more-news">
               VEJA TODAS AS NOTÍCIAS
               <i class="fa fa-long-arrow-right"></i>
             </a>
+
           </div>
         </div>
       </div>
