Add hightlights tabs styles, structure

--- a/main.html
+++ b/main.html
@@ -581,6 +581,62 @@
       </div>
     </section> <!-- end -->
 
+    <section class="mc-highlights-tabs">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+
+            <!-- Tab panes -->
+            <div class="tab-content">
+              <div class="tab-pane active" id="tab1" role="tabpanel" aria-labelledby="tab1">
+                <div class="row">
+                  <div class="col-12 col-md-6">
+                    <img src="https://via.placeholder.com/370x220" alt="">
+                  </div>
+                  <div class="col-12 col-md-5">
+                    <h2>MARISTAS DE CHAMPAGNAT</h2>
+                    <h3>Cras non pretium purus, at congue libero. Nulla vulputate semper tortor, sed tristique dolor porttitor quis.</h3>
+                    <p>Quisque convallis, odio ac convallis facilisis, massa nunc maximus ligula, nec sodales lorem ipsum quis sem. Praesent
+                    metus enim, pulvinar ut nulla quis, consequat pulvinar dolor. Vivamus euismod, orci vel imperdiet placerat, tortor erat
+                    aliquam magna, vitae dignissim lectus purus suscipit sapien.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane" id="tab2" role="tabpanel" aria-labelledby="tab2">...2</div>
+              <div class="tab-pane" id="tab3" role="tabpanel" aria-labelledby="tab3">...3</div>
+              <div class="tab-pane" id="tab4" role="tabpanel" aria-labelledby="tab4">...4</div>
+              <div class="tab-pane" id="tab5" role="tabpanel" aria-labelledby="tab5">...5</div>
+            </div>
+
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" id="tab1" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1"
+                  aria-selected="true">MARCELINO CHAMPAGNAT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="tab2" data-toggle="tab" href="#tab2" role="tab" aria-controls="tab2"
+                  aria-selected="false">ESPIRITUALIDADE MARISTA</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="tab3" data-toggle="tab" href="#tab3" role="tab" aria-controls="tab3"
+                  aria-selected="false">INSTITUTO MARISTA</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="tab4" data-toggle="tab" href="#tab4" role="tab" aria-controls="tab4"
+                  aria-selected="false">CAPÍTULOS E CONFERÊNCIAS GERAIS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="tab5" data-toggle="tab" href="#tab5" role="tab" aria-controls="tab5"
+                  aria-selected="false">MARISTAS DE CHAMPAGNAT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
     <section class="mc-latestnews">
       <div class="container">
         <div class="row">
