Add hightlights tabs styles

--- a/main.html
+++ b/main.html
@@ -590,15 +590,16 @@
             <div class="tab-content">
               <div class="tab-pane active" id="tab1" role="tabpanel" aria-labelledby="tab1">
                 <div class="row">
-                  <div class="col-12 col-md-6">
-                    <img src="https://via.placeholder.com/370x220" alt="">
+                  <div class="col-12 col-md-7">
+                    <img src="https://via.placeholder.com/670x370" alt="">
                   </div>
                   <div class="col-12 col-md-5">
                     <h2>MARISTAS DE CHAMPAGNAT</h2>
-                    <h3>Cras non pretium purus, at congue libero. Nulla vulputate semper tortor, sed tristique dolor porttitor quis.</h3>
+                    <h4>Cras non pretium purus, at congue libero. Nulla vulputate semper tortor, sed tristique dolor porttitor quis.</h4>
                     <p>Quisque convallis, odio ac convallis facilisis, massa nunc maximus ligula, nec sodales lorem ipsum quis sem. Praesent
                     metus enim, pulvinar ut nulla quis, consequat pulvinar dolor. Vivamus euismod, orci vel imperdiet placerat, tortor erat
                     aliquam magna, vitae dignissim lectus purus suscipit sapien.</p>
+                    <a href="">SAIBA MAIS<i class="fa fa-long-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
