--- a/main.html
+++ b/main.html
@@ -613,23 +613,23 @@
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
                 <a class="nav-link active" id="tab1" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1"
-                  aria-selected="true">MARCELINO CHAMPAGNAT</a>
+                  aria-selected="true">MARCELINO CHAMPAGNAT <i class="fa fa-long-arrow-right"></i></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="tab2" data-toggle="tab" href="#tab2" role="tab" aria-controls="tab2"
-                  aria-selected="false">ESPIRITUALIDADE MARISTA</a>
+                  aria-selected="false">ESPIRITUALIDADE MARISTA <i class="fa fa-long-arrow-right"></i></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="tab3" data-toggle="tab" href="#tab3" role="tab" aria-controls="tab3"
-                  aria-selected="false">INSTITUTO MARISTA</a>
+                  aria-selected="false">INSTITUTO MARISTA <i class="fa fa-long-arrow-right"></i></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="tab4" data-toggle="tab" href="#tab4" role="tab" aria-controls="tab4"
-                  aria-selected="false">CAPÍTULOS E CONFERÊNCIAS GERAIS</a>
+                  aria-selected="false">CAPÍTULOS E CONFERÊNCIAS GERAIS <i class="fa fa-long-arrow-right"></i></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="tab5" data-toggle="tab" href="#tab5" role="tab" aria-controls="tab5"
-                  aria-selected="false">MARISTAS DE CHAMPAGNAT</a>
+                  aria-selected="false">MARISTAS DE CHAMPAGNAT <i class="fa fa-long-arrow-right"></i></a>
               </li>
             </ul>
           </div>
