--- a/main.html
+++ b/main.html
@@ -585,8 +585,6 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-
-            <!-- Tab panes -->
             <div class="tab-content">
               <div class="tab-pane active" id="tab1" role="tabpanel" aria-labelledby="tab1">
                 <div class="row">
@@ -608,8 +606,6 @@
               <div class="tab-pane" id="tab4" role="tabpanel" aria-labelledby="tab4">...4</div>
               <div class="tab-pane" id="tab5" role="tabpanel" aria-labelledby="tab5">...5</div>
             </div>
-
-            <!-- Nav tabs -->
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
                 <a class="nav-link active" id="tab1" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1"
@@ -635,8 +631,7 @@
           </div>
         </div>
       </div>
-
-    </section>
+    </section> <!-- end -->
 
     <section class="mc-latestnews">
       <div class="container">
@@ -770,7 +765,123 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> <!-- end -->
+
+    <section class="mc-picsofday">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="main-title">FOTOS DO DIA</h2>
+          </div>
+          <div class="col-12">
+            <div id="picsCarouselIndicators" class="carousel carousel--multi3 slide" data-ride="picsCarouselIndicators">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="row">
+                    <div class="col">
+                      <div class="mc-default__card">
+                        <div class="mc-default__image">
+                          <img src="https://via.placeholder.com/370x220" alt="">
+                        </div>
+                        <div class="mc-default__header">
+                          <span class="date">27/11/2018</span>
+                          <span class="label">ITÁLIA</span>
+                        </div>
+                        <div class="mc-default__body">
+                          <p>Novo Conselho Executivo</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="mc-default__card">
+                        <div class="mc-default__image">
+                          <img src="https://via.placeholder.com/370x220" alt="">
+                        </div>
+                        <div class="mc-default__header">
+                          <span class="date">27/11/2018</span>
+                          <span class="label">ITÁLIA</span>
+                        </div>
+                        <div class="mc-default__body">
+                          <p>Novo Conselho Executivo</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="mc-default__card">
+                        <div class="mc-default__image">
+                          <img src="https://via.placeholder.com/370x220" alt="">
+                        </div>
+                        <div class="mc-default__header">
+                          <span class="date">27/11/2018</span>
+                          <span class="label">ITÁLIA</span>
+                        </div>
+                        <div class="mc-default__body">
+                          <p>Novo Conselho Executivo</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div> <!-- end -->
+                <div class="carousel-item">
+                  <div class="row">
+                    <div class="col">
+                      <div class="mc-default__card">
+                        <div class="mc-default__image">
+                          <img src="https://via.placeholder.com/370x220" alt="">
+                        </div>
+                        <div class="mc-default__header">
+                          <span class="date">27/11/2018</span>
+                          <span class="label">ITÁLIA</span>
+                        </div>
+                        <div class="mc-default__body">
+                          <p>Novo Conselho Executivo</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="mc-default__card">
+                        <div class="mc-default__image">
+                          <img src="https://via.placeholder.com/370x220" alt="">
+                        </div>
+                        <div class="mc-default__header">
+                          <span class="date">27/11/2018</span>
+                          <span class="label">ITÁLIA</span>
+                        </div>
+                        <div class="mc-default__body">
+                          <p>Novo Conselho Executivo</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="mc-default__card">
+                        <div class="mc-default__image">
+                          <img src="https://via.placeholder.com/370x220" alt="">
+                        </div>
+                        <div class="mc-default__header">
+                          <span class="date">27/11/2018</span>
+                          <span class="label">ITÁLIA</span>
+                        </div>
+                        <div class="mc-default__body">
+                          <p>Novo Conselho Executivo</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div> <!-- end -->
+              </div>
+              <a class="carousel-control-prev" href="#picsCarouselIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#picsCarouselIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
 
     <section>
       <div class="container">
