Now webpack accept multiply html pages

--- a/atividades.html
+++ b/atividades.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <!-- facebook -->
-    <meta property="og:url" content="">
-    <meta property="og:title" content="">
-    <meta property="og:image" content="">
-    <meta property="og:site_name" content="">
-    <meta property="og:description" content="">
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>Marista de Champagnat</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
+  <!-- facebook -->
+  <meta property="og:url" content="">
+  <meta property="og:title" content="">
+  <meta property="og:image" content="">
+  <meta property="og:site_name" content="">
+  <meta property="og:description" content="">
 
-    <!-- Fonts (Google Fonts/Typekit) -->
-    <!-- <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500' rel='stylesheet' type='text/css'> -->
+  <title>Marista de Champagnat</title>
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+  <!-- Fonts (Google Fonts/Typekit) -->
+  <!-- <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500' rel='stylesheet' type='text/css'> -->
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
+</head>
+
+<body>
 
   <!-- Google Tag Manager -->
   <!-- <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-XXXXXX"
@@ -57,7 +59,8 @@
         <a class="navbar-brand" href="#">
           <img src="src/images/logo-marista-c@2x.png" alt="Marista">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne"
+          aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -83,23 +86,28 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="src/images/icon-facebook@2x.png" alt="facebook"></a>
+              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="src/images/icon-facebook@2x.png"
+                  alt="facebook"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="src/images/icon-linkedin@2x.png" alt="linkedin"></a>
+              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="src/images/icon-linkedin@2x.png"
+                  alt="linkedin"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="src/images/icon-youtube@2x.png" alt="youtube"></a>
+              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="src/images/icon-youtube@2x.png"
+                  alt="youtube"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="src/images/icon-twitter@2x.png" alt="twitter"></a>
+              <a class="nav-link nav-link--icon d-none d-lg-block" href="#"><img src="src/images/icon-twitter@2x.png"
+                  alt="twitter"></a>
             </li>
           </ul>
           <a class="navbar-primary__search d-none d-lg-block" href="">
             <img src="src/images/icon-lupa2x.png" alt="lupa">
           </a>
           <div class="dropdown">
-            <button class="dropdown-toggle footer-bottom__lang" type="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="dropdown-toggle footer-bottom__lang" type="button" id="dropdownLang" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               ENG
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownLang">
@@ -114,7 +122,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-secondary d-none d-lg-block" role="navigation">
       <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo" aria-controls="navbarTwo" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo"
+          aria-controls="navbarTwo" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -191,7 +200,8 @@
                           <a class="nav-link" href="#">Família Global</a>
                         </li>
                         <li class="nav-item nav-item--collapse">
-                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu4">Espiritualidade Marista</a>
+                          <a class="nav-link" data-toggle="collapse" href="#collapseSubmenu4">Espiritualidade
+                            Marista</a>
                           <div id="collapseSubmenu4" class="collapse">
                             <a class="dropdown-item" href="#">Link 1</a>
                             <a class="dropdown-item" href="#">Link 2</a>
@@ -292,7 +302,8 @@
               <a class="nav-link nav-link--arrow" href="#"><span>HOME</span></a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarAtividades" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarAtividades" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
                 ATIVIDADES
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
@@ -315,7 +326,8 @@
               </div>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarNoticias" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarNoticias" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
                 NOTÍCIAS
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
@@ -338,7 +350,8 @@
               </div>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarFotos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarFotos" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
                 FOTOS
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
@@ -362,7 +375,8 @@
               </div>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarVideos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarVideos" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
                 VÍDEOS
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
@@ -385,7 +399,8 @@
               </div>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarVideos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarVideos" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
                 BIBLIOTECA
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
               </a>
@@ -431,6 +446,33 @@
   </header> <!-- end -->
 
   <main>
+    <section class="mc-breadcrumbs">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">HOME</a></li>
+                <!-- <li class="breadcrumb-item"><a href="#">Library</a></li> -->
+                <li class="breadcrumb-item active" aria-current="page">ATIVIDADE</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
+
+    <section class="mc-atividades mc-atividades--eventos">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="main-title">EVENTOS HISTÓRICOS DO INSTITUTO NOS ÚLTIMOS ANOS</h2>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
+
+
     <section class="mc-bannerfull">
       <div id="homeCarouselIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -464,11 +506,13 @@
             </div>
           </div>
         </div>
-        <a class="carousel-control carousel-control-prev" href="#homeCarouselIndicators" role="button" data-slide="prev">
+        <a class="carousel-control carousel-control-prev" href="#homeCarouselIndicators" role="button"
+          data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" href="#homeCarouselIndicators" role="button" data-slide="next">
+        <a class="carousel-control carousel-control-next" href="#homeCarouselIndicators" role="button"
+          data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
@@ -593,10 +637,13 @@
                   </div>
                   <div class="col-12 col-md-5">
                     <h2>MARISTAS DE CHAMPAGNAT</h2>
-                    <h4>Cras non pretium purus, at congue libero. Nulla vulputate semper tortor, sed tristique dolor porttitor quis.</h4>
-                    <p>Quisque convallis, odio ac convallis facilisis, massa nunc maximus ligula, nec sodales lorem ipsum quis sem. Praesent
-                    metus enim, pulvinar ut nulla quis, consequat pulvinar dolor. Vivamus euismod, orci vel imperdiet placerat, tortor erat
-                    aliquam magna, vitae dignissim lectus purus suscipit sapien.</p>
+                    <h4>Cras non pretium purus, at congue libero. Nulla vulputate semper tortor, sed tristique dolor
+                      porttitor quis.</h4>
+                    <p>Quisque convallis, odio ac convallis facilisis, massa nunc maximus ligula, nec sodales lorem
+                      ipsum quis sem. Praesent
+                      metus enim, pulvinar ut nulla quis, consequat pulvinar dolor. Vivamus euismod, orci vel imperdiet
+                      placerat, tortor erat
+                      aliquam magna, vitae dignissim lectus purus suscipit sapien.</p>
                     <a href="">SAIBA MAIS<i class="fa fa-long-arrow-right"></i></a>
                   </div>
                 </div>
@@ -652,7 +699,8 @@
                     <span class="label">ITÁLIA</span>
                   </div>
                   <div class="mc-latestnews__body">
-                    <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do Conselho</p>
+                    <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do
+                      Conselho</p>
                   </div>
                   <div class="mc-latestnews__footer">
                     <ul>
@@ -678,7 +726,8 @@
                     <span class="label">ITÁLIA</span>
                   </div>
                   <div class="mc-latestnews__body">
-                    <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do Conselho</p>
+                    <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do
+                      Conselho</p>
                   </div>
                   <div class="mc-latestnews__footer">
                     <ul>
@@ -706,7 +755,8 @@
                     <span class="label">CASA GERAL</span>
                   </div>
                   <div class="mc-latestnews__body">
-                    <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do Conselho</p>
+                    <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do
+                      Conselho</p>
                   </div>
                   <div class="mc-latestnews__footer">
                     <ul>
@@ -892,16 +942,17 @@
           <div class="col-12">
             <ul class="nav nav-tabs" id="ourPresenceTabs" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" id="tab_one" data-toggle="tab" href="#tab_one" role="tab" aria-controls="tab_one"
-                  aria-selected="true">Onde estamos <i class="fa fa-long-arrow-right"></i></a>
+                <a class="nav-link active" id="tab_one" data-toggle="tab" href="#tab_one" role="tab"
+                  aria-controls="tab_one" aria-selected="true">Onde estamos <i class="fa fa-long-arrow-right"></i></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="tab_two" data-toggle="tab" href="#tab_two" role="tab" aria-controls="tab_two"
                   aria-selected="false">Estatísticas <i class="fa fa-long-arrow-right"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="tab_three" data-toggle="tab" href="#tab_three" role="tab" aria-controls="tab_three"
-                  aria-selected="false">Unidades Administrativas <i class="fa fa-long-arrow-right"></i></a>
+                <a class="nav-link" id="tab_three" data-toggle="tab" href="#tab_three" role="tab"
+                  aria-controls="tab_three" aria-selected="false">Unidades Administrativas <i
+                    class="fa fa-long-arrow-right"></i></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="tab_four" data-toggle="tab" href="#tab_four" role="tab" aria-controls="tab_four"
@@ -912,8 +963,9 @@
               <div class="tab-pane active" id="tab_one" role="tabpanel" aria-labelledby="tab_one">
                 <div class="row">
                   <div class="col-12">
-                    <p class="mc-ourpresence__text">Os Irmãos Maristas se encontram em 81 países dos cinco continentes. Aqui te mostramos nossa organização e te convidamos
-                    a dar uma volta pelo mapa-múndi para descobrir a presença marista no mundo.</p>
+                    <p class="mc-ourpresence__text">Os Irmãos Maristas se encontram em 81 países dos cinco continentes.
+                      Aqui te mostramos nossa organização e te convidamos
+                      a dar uma volta pelo mapa-múndi para descobrir a presença marista no mundo.</p>
                   </div>
                   <div class="col-12">
                     <div class="mc-ourpresence__map">
@@ -948,8 +1000,10 @@
           <div class="col-xs-12 col-md-6 text-center">
             <img class="footer-top__logo" src="src/images/logo-marista-w@2x.png" alt="Marista">
             <ul class="list-inline footer-top__social">
-              <li class="list-inline-item"><a href=""><img src="src/images/icon-facebook@2x.png" alt="facebook"></a></li>
-              <li class="list-inline-item"><a href=""><img src="src/images/icon-linkedin@2x.png" alt="linkedin"></a></li>
+              <li class="list-inline-item"><a href=""><img src="src/images/icon-facebook@2x.png" alt="facebook"></a>
+              </li>
+              <li class="list-inline-item"><a href=""><img src="src/images/icon-linkedin@2x.png" alt="linkedin"></a>
+              </li>
               <li class="list-inline-item"><a href=""><img src="src/images/icon-youtube@2x.png" alt="youtube"></a></li>
               <li class="list-inline-item"><a href=""><img src="src/images/icon-twitter@2x.png" alt="twitter"></a></li>
             </ul>
@@ -1017,5 +1071,6 @@
     </a>
   </div> <!-- end -->
 
-  </body>
+</body>
+
 </html>
