Add breadcrumb structure and styles

--- a/atividades.html
+++ b/atividades.html
@@ -452,7 +452,7 @@
           <div class="col-12">
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">HOME</a></li>
+                <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
                 <!-- <li class="breadcrumb-item"><a href="#">Library</a></li> -->
                 <li class="breadcrumb-item active" aria-current="page">ATIVIDADE</li>
               </ol>
@@ -467,6 +467,20 @@
         <div class="row">
           <div class="col-12">
             <h2 class="main-title">EVENTOS HISTÓRICOS DO INSTITUTO NOS ÚLTIMOS ANOS</h2>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            <div class="mc-atividades__card">
+              <div class="mc-atividades__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
+              <div class="mc-atividades__body">
+                <p>Encontro Internacional de Jovens Maristas - Guatemala 2019</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            2
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            3
           </div>
         </div>
       </div>
