--- a/main.html
+++ b/main.html
@@ -54,7 +54,7 @@
   <header class="header-blc">
     <nav class="navbar navbar-expand-lg navbar-light navbar-primary" role="navigation">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
           <img src="src/images/logo-marista-c@2x.png" alt="Marista">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
