--- a/atividades.html
+++ b/atividades.html
@@ -462,25 +462,46 @@
       </div>
     </section> <!-- end -->
 
-    <section class="mc-atividades mc-atividades--eventos">
+    <section class="mc-activities mc-activities--eventos">
       <div class="container">
         <div class="row">
           <div class="col-12">
             <h2 class="main-title">EVENTOS HISTÓRICOS DO INSTITUTO NOS ÚLTIMOS ANOS</h2>
           </div>
           <div class="col-12 col-sm-6 col-md-4">
-            <div class="mc-atividades__card">
-              <div class="mc-atividades__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-              <div class="mc-atividades__body">
-                <p>Encontro Internacional de Jovens Maristas - Guatemala 2019</p>
+            <a class="mc-activities__card" href="">
+              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
+              <div class="mc-activities__body">
+                Encontro Internacional de Jovens Maristas - Guatemala 2019
               </div>
-            </div>
+            </a>
           </div>
           <div class="col-12 col-sm-6 col-md-4">
-            2
+            <a class="mc-activities__card" href="">
+              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
+              <div class="mc-activities__body">
+                Encontro Internacional de Jovens Maristas - Guatemala 2019
+              </div>
+            </a>
           </div>
           <div class="col-12 col-sm-6 col-md-4">
-            3
+            <a class="mc-activities__card" href="">
+              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
+              <div class="mc-activities__body">
+                Encontro Internacional de Jovens Maristas - Guatemala 2019
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4">
+            <a class="mc-activities__card" href="">
+              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
+              <div class="mc-activities__body">
+                Encontro Internacional de Jovens Maristas - Guatemala 2019
+              </div>
+            </a>
+          </div>
+          <div class="col-12 text-center">
+            <a class="btn btn-square btn-square-leak" href="">VER TODOS OS EVENTOS HISTÓRICOS<i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
