--- a/atividades.html
+++ b/atividades.html
@@ -611,7 +611,33 @@
           <div class="col-12">
             <h2 class="main-title">PROJETOS ESPECIAIS</h2>
           </div>
-
+        </div>
+        <div class="row">
+          <div class="col-12 col-sm-6 col-lg-8">
+            <div class="mc-default__card mc-default__card--v2">
+              <div class="mc-default__image"><img src="https://via.placeholder.com/270x170" alt=""></div>
+              <div>
+                <div class="mc-default__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
+                <div class="mc-default__body">
+                  <p>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</p>
+                </div>
+              </div>
+            </div>
+            <div class="mc-default__card mc-default__card--v2">
+              <div class="mc-default__image"><img src="https://via.placeholder.com/270x170" alt=""></div>
+              <div>
+                <div class="mc-default__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
+                <div class="mc-default__body">
+                  <p>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-4">
+            ADS 300x600
+          </div>
+        </div>
+        <div class="row">
           <div class="col-12 text-center">
             <a class="btn btn-square btn-square-leak" href="">VER TODOS OS PROJETOS<i class="fa fa-long-arrow-right"></i></a>
           </div>
