--- a/atividades.html
+++ b/atividades.html
@@ -453,8 +453,8 @@
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                <!-- <li class="breadcrumb-item"><a href="#">Library</a></li> -->
-                <li class="breadcrumb-item active" aria-current="page">ATIVIDADE</li>
+                <!-- <li class="breadcrumb-item"><a href="#"></a></li> -->
+                <li class="breadcrumb-item active" aria-current="page">ATIVIDADES</li>
               </ol>
             </nav>
           </div>
