--- a/eventos-single.html
+++ b/eventos-single.html
@@ -453,7 +453,7 @@
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                <li class="breadcrumb-item"><a href="atividades.html">ATIVIDADE</a></li>
+                <li class="breadcrumb-item"><a href="atividades.html">ATIVIDADES</a></li>
                 <li class="breadcrumb-item active" aria-current="page">ENCONTRO INTERNACIONAL DE JOVENS MARISTAS - GUATEMALA 2019</li>
               </ol>
             </nav>
@@ -468,7 +468,7 @@
           <div class="col-12 col-sm-6 col-lg-8">
             <div class="row">
               <div class="col-12 col-sm-6">
-                <a class="mc-activities__card" href="eventos-single.html">
+                <a class="mc-activities__card" href="">
                   <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
                   <div class="mc-activities__body">
                     Encontro Internacional de Jovens Maristas - Guatemala 2019
