Add events single structure and styles

--- a/eventos-single.html
+++ b/eventos-single.html
@@ -466,33 +466,35 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-6 col-lg-8">
+
             <div class="row">
-              <div class="col-12 col-sm-6">
-                <a class="mc-activities__card" href="">
-                  <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-                  <div class="mc-activities__body">
-                    Encontro Internacional de Jovens Maristas - Guatemala 2019
+              <div class="col-12">
+                <article class="mc-single">
+                  <div class="mc-single__image"><img src="https://via.placeholder.com/770x450" alt=""></div>
+                  <div class="mc-single__header">
+                    <span class="date">27/11/2018</span>
+                    <span class="label">ITÁLIA</span>
                   </div>
-                </a>
-              </div>
-              <div class="col-12 col-sm-6">
-                <a class="mc-activities__card" href="">
-                  <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-                  <div class="mc-activities__body">
-                    Encontro Internacional de Jovens Maristas - Guatemala 2019
+                  <div class="mc-single__body">
+                    <h2 class="main-title main-title--space30">ENCONTRO INTERNACIONAL DE JOVENS MARISTAS - GUATEMALA 2019</h2>
+                    <p>A 25ª reunião da Conferência Européia Marista (CEM) foi realizada em Barcelona, ​​de 6 a 8 de novembro de 2018. Vários
+                    temas foram estudados. Lembramos de quatro deles.</p>
+                    <p>Rede Europeia de Comunidades A CEM aprovou os 4 princípios do projeto “Rede de Comunidades Maristas na Europa”. 1.
+                    Promovemos uma visão nova e enriquecedora que nos faz caminhar rumo a uma “família global” para gerar e nutrir a vida e
+                    a missão maristas em toda a sua diversidade. 2. Sentimo-nos chamados à criação e fortalecimento de comunidades centradas
+                    na fraternidade, que cultivam uma espiritualidade baseada no encontro com Deus, consigo mesmo e com os outros. Assim,
+                    respondemos concretamente às necessidades emergentes que nos desafiam como cristãos e maristas em conexão com a igreja
+                    local e (ou) outras instituições. 3. Partilhamos, como rede, sinergias, pessoas, missão, vida, comunicação …, a partir
+                    de uma disponibilidade global, para oferecer um olhar mais cheio de esperança ao futuro marista na Europa, 4.
+                    Construímos casas de luz como Maristas de Champagnat, envolvendo-nos com paixão na criação de um estilo de vida familiar
+                    aberto a todos para responder aos apelos do XXII Capítulo Geral.</p>
                   </div>
-                </a>
-              </div>
-              <div class="col-12 col-sm-6">
-                <a class="mc-activities__card" href="">
-                  <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-                  <div class="mc-activities__body">
-                    Encontro Internacional de Jovens Maristas - Guatemala 2019
+                  <div class="mc-single__share">
+                    <span>COMPARTILHE:</span>
                   </div>
-                </a>
+                </article>
               </div>
             </div>
-
           </div>
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="tags">
